--- a/style.css
+++ b/style.css
@@ -102,23 +102,66 @@
     font-family: Merriweather;
     font-size: 64px;
     font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7.04px;
   }
   .second-section-text p{
-    color: rgba(255, 255, 255, 0.80);
-font-family: Inter;
-font-size: 18px;
-font-weight: 400;
-margin: 30px 0;
+  color: rgba(255, 255, 255, 0.80);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 30px 0;
   }
-
   .second-section-text a{
     color: #FFF;
-font-family: Inter;
-font-size: 20px;
-font-weight: 700;
-text-decoration: none;
-margin-left: 65px;
+  font-family: Inter;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 700;
+  font-style: normal;
+  line-height: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-left: 65px;
   }
+  
+  /* <!-- place date time section  --> */
+  #third-section{
+    background: linear-gradient(
+       180deg,
+       rgba(255, 0, 0, 0.1) 0%, rgba(255, 0, 0, 0) 100%);
+       width: 1320px;
+       margin: 120px auto;
+       border-radius: 11px;
+       height: 450px;
+     
+   }
+   .third-section-text{
+    text-align: center;
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    padding: 170px 0px 60px 0px;
+     
+   }
+ 
+   .third-section-button{
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: #F00;
+    padding:  16px 32px;
+    border-radius: 10px;
+    border: none;  
+   }
+   
+ .orange{
+   color: #F00;
+ }
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
