--- a/style.css
+++ b/style.css
@@ -1,120 +1,125 @@
-*{ 
-    margin: 0;
-    padding: 0;
-    max-width: 1240px;
-    margin: 0 auto;
+* {
+  margin: 0;
+  padding: 0;
+  max-width: 1240px;
+  margin: 0 auto;
 }
 
 #New-year {
-    background: linear-gradient( rgba(0,0,0,0.9), rgba(0,0,0,0.3)), url(./resources/Banner\ Image.png);
-    margin-top: 50px;
-    border-radius: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)), url(./resources/Banner\ Image.png);
+  margin-top: 50px;
+  border-radius: 10px;
+  background-repeat: no-repeat;
+  background-position: center;
 
- }
+}
 
- .New-year-text{
-    width: 100%; 
-    text-align: center;
-    padding: 190px 0;
-    
- }
+.New-year-text {
+  width: 100%;
+  text-align: center;
+  padding: 190px 0;
 
- .New-year-text h6{
-    color: #FFF;
-    font-family: Merriweather;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
- }
+}
+
+.New-year-text h6 {
+  color: #FFF;
+  font-family: Merriweather;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 
 
- .New-year-text h1{
-    color: white;
-    font-family: Merriweather;
-    font-size: 72px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 95px;
-  }
+.New-year-text h1 {
+  color: white;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 95px;
+}
 
-  /* <!-- 65% Deals section --> */
+/* <!-- 65% Deals section --> */
 
-.deals-section{
-   text-align: center;
-  }
-  .deals-text{
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-  .deals-text h1{
-    color: #F00;
-    font-family: Inter;
-    font-size: 88px;
-    font-weight: 700;
-    line-height: normal;
-  }
-  
-  .deals-text p{
-    color: #F00;
-    font-family: Inter;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: normal;
-  }
+.deals-section {
+  text-align: center;
+}
 
-  .deals-text h3{
-    color: #070211;
-    text-align: center;
-    font-family: Inter;
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
+.deals-text {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.deals-text h1 {
+  color: #F00;
+  font-family: Inter;
+  font-size: 88px;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.deals-text p {
+  color: #F00;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.deals-text h3 {
+  color: #070211;
+  text-align: center;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 
 /* <!-- Midnight Party Section --> */
 
-#second-section{
-    background: linear-gradient(to right ,rgba(0,0,0,0.9), rgba(0,0,0,0.3)), url(./resources/Vectorrr.png);
-    margin-top: 150px;
-    border-radius: 10px; 
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .second-inside-part{
-    display: flex;
-    padding-top: 50px;
-    align-items: center;
-    justify-content: space-between;
+#second-section {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)), url(./resources/Vectorrr.png);
+  margin-top: 150px;
+  border-radius: 10px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.second-inside-part {
+  display: flex;
+  padding-top: 50px;
+  align-items: center;
+  justify-content: space-between;
 
 
-  }
+}
 
-  .second-section-text{
-   text-align: center left;
-   }
-  
-  .second-section-text h1{
-    color: #FFF;
-    font-family: Merriweather;
-    font-size: 64px;
-    font-weight: 900;
-    line-height: 88px;
-    letter-spacing: 7.04px;
-  }
-  .second-section-text p{
+.second-section-text {
+  text-align: center left;
+}
+
+.second-section-text h1 {
+  color: #FFF;
+  font-family: Merriweather;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 88px;
+  letter-spacing: 7.04px;
+}
+
+.second-section-text p {
   color: rgba(255, 255, 255, 0.80);
   font-family: Inter;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
   margin: 30px 0;
-  }
-  .second-section-text a{
-    color: #FFF;
+}
+
+.second-section-text a {
+  color: #FFF;
   font-family: Inter;
   font-size: 20px;
   text-align: center;
@@ -124,45 +129,216 @@
   text-transform: uppercase;
   text-decoration: none;
   margin-left: 65px;
-  }
-  
-  /* <!-- place date time section  --> */
-  #third-section{
-    background: linear-gradient(
-       180deg,
-       rgba(255, 0, 0, 0.1) 0%, rgba(255, 0, 0, 0) 100%);
-       width: 1320px;
-       margin: 120px auto;
-       border-radius: 11px;
-       height: 450px;
-     
-   }
-   .third-section-text{
-    text-align: center;
-    color: #070211;
-    font-family: Inter;
-    font-size: 32px;
-    font-weight: 600;
-    padding: 170px 0px 60px 0px;
-     
-   }
- 
-   .third-section-button{
-    color: #FFF;
-    text-align: center;
-    font-family: Inter;
-    font-size: 20px;
-    font-weight: 700;
-    background-color: #F00;
-    padding:  16px 32px;
-    border-radius: 10px;
-    border: none;  
-   }
-   
- .orange{
-   color: #F00;
- }
+}
+
+/* <!-- place date time section  --> */
+#third-section {
+  background: linear-gradient(180deg,
+      rgba(255, 0, 0, 0.1) 0%, rgba(255, 0, 0, 0) 100%);
+  width: 1320px;
+  margin: 120px auto;
+  border-radius: 11px;
+  height: 450px;
+
+}
+
+.third-section-text {
+  text-align: center;
+  color: #070211;
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 600;
+  padding: 170px 0px 60px 0px;
+
+}
+
+.third-section-button {
+  color: #FFF;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: #F00;
+  padding: 16px 32px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.orange {
+  color: #F00;
+}
+
+/* <!-- coming soon circle image part  --> */
+
+#Fourth-section {
+  display: flex;
+  height: 450px;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 120px;
+  gap: 120px;
+}
+
+.left-text h5 {
+  color: #F00;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.left-text h1 {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.left-text p {
+  color: rgba(7, 2, 17, 0.60);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+
+}
+
+.right-text-image h1 {
+  color: #F00;
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.right-text-image p {
+  color: rgba(7, 2, 17, 0.60);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 10px 0 25px 0;
+  width: 200px;
+  line-height: 32px;
+}
+
+.middle-image {
+  display: flex;
+  border: 10px solid #FF0000;
+  border-radius: 50%;
+  padding: 20px;
+}
+
+/* <!--  Holiday Section --> */
+
+.holiday-section {
+  margin-top: 200px;
+  text-align: center;
+}
+
+.holiday-section h5 {
+  font-size: 30px;
+  font-family: Inter;
+}
+
+.holiday-section h1 {
+  font-size: 80px;
+  margin: 20px 0;
+  font-family: Inter;
+
+}
+
+.holiday-section span {
+  color: #FF0000;
+}
+
+.holiday-section p {
+  color: #070211;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+}
+
+.image-container {
+  margin-top: 500px;
+  position: relative;
+}
+
+.img1 {
+  position: absolute;
+  top: -220px;
+}
+
+.img1 img {
+  width: 60%;
+}
+
+.img2 {
+  position: absolute;
+  right: 0;
+  top: -433px;
+}
+
+.img3 {
+  position: absolute;
+  right: 300px;
+  top: -333px;
+}
+
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+
+}
+
+/* <!--  Portfolio Section --> */
+
+.portfolio-section {
+  margin-top: 100px;
+  margin-bottom: 1;
+}
+
+.portfolio-section h6 {
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #FF0000;
+}
+
+.portfolio-section h1 {
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.portfolio-section p {
+  color: rgba(7, 2, 17, 0.60);
+
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+}
+
+
+.image-container2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin-top: 30px;
+  margin-bottom: 1;
+  cursor: pointer;
+
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
-
